dashboard/matrix-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prayujt-matrix-wellknown
  namespace: dashboard
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - prayujt.com
    secretName: prayujt-com-certs
  rules:
  - host: prayujt.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /.well-known/matrix/client
        backend:
          service:
            name: matrix-wellknown
            port:
              number: 80
